KAlarm Change Log

=== Version 3.4.1 (KDE Gear 22.04.1) --- 2 May 2022 ===
* Fix checkboxes being disabled in Preferences dialogue.
* Fix time spin boxes being displayed in the wrong position.
* Fix crash when Try clicked to stop audio alarm with fade [KDE Bug 452962]
* Fix sound files not playing after previously playing with fade.
* Fix Stop Play button not working for display alarm with audio file.
* Fix crash in font chooser when style is selected after deselecting default font [KDE Bug 453193]

=== Version 3.4.0 (KDE Gear 22.04) --- 6 April 2022 ===
* Allow calendars and date picker to be shown together in side panel [KDE Bug 440250]
* Shrink calendar list to remove empty space when too large.
* When a resource is re-enabled, ensure its alarms are displayed.
* When default resources are created on first run, set them as standard (default) calendars.
* Cancel sound file playback if audio alarm edit dialogue is closed after clicking Try.
* Remove all 'speak' functions if KAlarm is built with text-to-speech disabled.
* Add option to disable wake-from-suspend alarms if KAlarm is built without KAuth.
* Use threading correctly for playing sound files.
* Incorporate kalarmcal library into KAlarm as a private library.

=== Version 3.3.6 (KDE Gear 21.12.3) --- 9 February 2022 ===
* Fix failure to create a missing calendar file after enabling a resource.

=== Version 3.3.5 (KDE Gear 21.12.2) --- 31 January 2022 ===
* Fix crash after Defer is selected in alarm notification message [KDE Bug 448212]
* Fix deleted calendar resources reappearing when KAlarm restarts.
* For command alarms, use path to find executables, instead of current directory.
* Fix regression introduced in version 3.1.0:
    Make auto-close work for message windows.

=== Version 3.3.4 (KDE Gear 21.12.1) --- 28 December 2021 ===
* Treat empty read-only, or non-existent, calendar files as loaded.
* Fix bad calendar files preventing command line actions from running.