@@ -4,6 +4,7 @@ KAlarm Change Log
 * Fix checkboxes being disabled in Preferences dialogue.
 * Fix time spin boxes being displayed in the wrong position.
 * Fix crash when Try clicked to stop audio alarm with fade [KDE Bug 452962]
+* Don't show volume fade controls if Phonon backend doesn't support fade.
 * Fix sound files not playing after previously playing with fade.
 * Fix Stop Play button not working for display alarm with audio file.
 * Fix crash in font chooser when style is selected after deselecting default font [KDE Bug 453193]
